Bug 897776 - MediaRecorder infinite recursion with requestData() calls in dataavailable event. r=roc